# leptos-fluent-axum

./: Cargo.toml
locales/en/: main.ftl
locales/es/: main.ftl
src/: app.rs  i18n.rs  lib.rs  main.rs  shell.rs
src/routing/: mod.rs  not_found_page.rs  page_home.rs
